# f-stack

./: .gitignore  .gitmodules  README.md  execute.sh
dpdk/kernel/linux/igb_uio/: igb_uio.c
example/: Makefile  buffer.c  buffer.h  fstack_daemon.c  fstack_daemon.h  main_client.c  main_client_test.c  main_control.c  mutex_stack.c  mutex_stack.h  simple_structure.h  test_buffer  test_buffer.c
lib/: Makefile
mk/: kern.pre.mk
rust/: Cargo.toml  build.rs  env.sh  wrapper.h
rust/src/: bindings.rs  lib.rs  main.rs  tools.rs
