[package]
name = "f-stack"
version = "0.1.0"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
devourer = { path = "../PrimitiveModules/devourer" }

[build-dependencies]
bindgen = "0.53.1"
cc = "*"
