[package]
name = "f-stack"
version = "0.1.0"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
devourer = { path = "../PrimitiveModules/devourer" }
rust-dpdk-sys = { git = "https://github.com/ANLAB-KAIST/rust-dpdk.git" }
# export RTE_TARGET="x86_64-native-linuxapp-gcc"
[build-dependencies]
bindgen = "0.47.3" # needed by rust-dpdk-sys
cc = "*"
