[package]
name = "fstack"
version = "0.1.0"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
#devourer = { path = "../PrimitiveModules/devourer" }
rust-dpdk-sys = { git = "https://github.com/ANLAB-KAIST/rust-dpdk.git" }

[build-dependencies]
bindgen = "*" # older version needed by rust-dpdk-sys
cc = "*"
